--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "freecloud-auto-renew",
+  "name": "freecloud-puppeteer-renew",
   "version": "1.0.0",
-  "description": "FreeCloud 自动续期系统 - 基于 GitHub Actions",
+  "description": "Puppeteer-based FreeCloud Auto Renew Script",
   "main": "fcrenew.js",
   "type": "module",
   "scripts": {
-    "start": "node fcrenew.js",
-    "renew": "node fcrenew.js"
+    "start": "node fcrenew.js"
   },
-  "keywords": [
-    "freecloud",
-    "auto-renew",
-    "github-actions",
-    "cloudflare-worker"
-  ],
-  "author": "FreeCloud Auto Renew System",
-  "license": "MIT",
   "dependencies": {
-    "node-fetch": "^2.7.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "puppeteer-core": "^21.0.0",
+    "chrome-aws-lambda": "^10.1.0"
   }
 }
