--- a/.github/workflows/freecloud-renew.yml
+++ b/.github/workflows/freecloud-renew.yml
@@ -20,7 +20,7 @@ jobs:
       - name: 安装浏览器依赖
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgbm-dev libnss3 libxss1 libasound2 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdbus-1-3 libgdk-pixbuf2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libx11-xcb1 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libxrender1 libcairo2 libfontconfig1 libpangocairo-1.0-0
+          sudo apt-get install -y libgbm-dev libnss3 libxss1 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdbus-1-3 libgdk-pixbuf2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libx11-xcb1 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libxrender1 libcairo2 libfontconfig1 libpangocairo-1.0-0
 
       - name: 安装依赖
         run: npm install
