--- a/.github/workflows/freecloud-renew.yml
+++ b/.github/workflows/freecloud-renew.yml
@@ -3,7 +3,7 @@ name: FreeCloud 自动续期
 on:
   workflow_dispatch:
   schedule:
-    - cron: '15 0 * * *' # 北京时间早上8点15分
+    - cron: '15 0 * * *'
 
 jobs:
   renew:
@@ -17,15 +17,11 @@ jobs:
         with:
           node-version: '18'
 
-      - name: 安装浏览器依赖
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgbm-dev libnss3 libxss1 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdbus-1-3 libgdk-pixbuf2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libx11-xcb1 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libxrender1 libcairo2 libfontconfig1 libpangocairo-1.0-0
-
       - name: 安装依赖
         run: npm install
 
       - name: 执行 FreeCloud 续期
         env:
           FREECLOUD_ACCOUNTS: ${{ secrets.FREECLOUD_ACCOUNTS }}
+          FREECLOUD_COOKIE: ${{ secrets.FREECLOUD_COOKIE }}
         run: npm start
